--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -7,7 +7,9 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.75"
+clap = { version = "4.4.7", features = ["derive"] }
 colored = "2.0.4"
+lazy_static = "1.4.0"
 log = "0.4.20"
 parser = { path = "../parser" }
 rustyline = "12.0.0"
