Separate interactive shell into separate crate

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cli"
+name = "rush"
 version = "0.1.0"
 edition = "2021"
 description = "CLI"
@@ -9,6 +9,7 @@ license = "MIT"
 anyhow = "1.0.75"
 clap = { version = "4.4.7", features = ["derive"] }
 env_logger = "0.10.0"
+interactive-shell = { path = "../interactive-shell" }
 log = "0.4.20"
 parser = { path = "../parser" }
 shell = { path = "../shell" }
