--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["cli", "parser"]
+members = ["cli", "parser", "shell", "interactive-shell"]
 
 [profile.release]
 opt-level = "z"
