--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.7", features = ["derive"] }
+glob = "0.3.1"
 lazy_static = "1.4.0"
 log = "0.4.20"
 parser = { path = "../parser" }
