--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -9,6 +9,7 @@ version.workspace = true
 anyhow = "1.0.75"
 clap = { version = "4.4.7", features = ["derive"] }
 glob = "0.3.1"
+itertools = "0.12.0"
 lazy_static = "1.4.0"
 log = "0.4.20"
 parser = { path = "../parser" }
