--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,9 +17,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Test
         uses: devcontainers/ci@v0.3
         with:
+          cacheFrom: ghcr.io/reubeno/brush/devcontainer
+          push: never
           runCmd: |
             set -euo pipefail
             cargo build
@@ -31,9 +41,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Test
         uses: devcontainers/ci@v0.3
         with:
+          cacheFrom: ghcr.io/reubeno/brush/devcontainer
+          push: never
           runCmd: |
             set -euo pipefail
             cargo fmt --check --all
