Progress toward command substitution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["cli", "parser", "shell", "interactive-shell", "integration-tests"]
+members = ["cli", "parser", "shell", "interactive-shell"]
 
 [workspace.package]
 edition = "2021"
