--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,5 +59,5 @@ jobs:
             set -euo pipefail
             cargo fmt --check --all
             cargo check --all-targets
-            cargo deny --exclude integration-tests check
+            cargo deny check
             cargo clippy --all-targets
