--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,3 +13,15 @@ interactive-shell = { path = "../interactive-shell" }
 log = "0.4.20"
 parser = { path = "../parser" }
 shell = { path = "../shell" }
+
+[dev-dependencies]
+anyhow = "1.0.75"
+assert_cmd = "2.0.12"
+assert_fs = "1.0.13"
+colored = "2.0.4"
+dir-diff = "0.3.2"
+glob = "0.3.1"
+indent = "0.1.1"
+prettydiff = "0.6.4"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_yaml = "0.9.27"
