--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -9,3 +9,15 @@ cases:
       echo hi >out.txt
       ls out.txt
       cat out.txt
+
+  - name: "Process substitution: input"
+    expected_failure: true
+    stdin: |
+      shopt -u -o posix
+      cat <(echo hi)
+
+  - name: "Process substitution: input + output"
+    expected_failure: true
+    stdin: |
+      shopt -u -o posix
+      cp <(echo hi) >(cat)
