--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -5,6 +5,13 @@ edition.workspace = true
 license.workspace = true
 version.workspace = true
 
+[lints.clippy]
+all = { level = "deny", priority = -1 }
+missing_errors_doc = "allow"
+collapsible_if = "allow"
+collapsible_else_if = "allow"
+if_same_then_else = "allow"
+
 [dependencies]
 anyhow = "1.0.75"
 log = "0.4.20"
