--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,6 +16,7 @@ interactive-shell = { path = "../interactive-shell" }
 log = "0.4.20"
 parser = { path = "../parser" }
 shell = { path = "../shell" }
+tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
 
 [dev-dependencies]
 anyhow = "1.0.76"
