--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -10,8 +10,10 @@ workspace = true
 
 [dependencies]
 anyhow = "1.0.76"
+async-recursion = "1.0.5"
+async-trait = "0.1.75"
 clap = { version = "4.4.11", features = ["derive"] }
-command-fds = "0.3.0"
+futures = "0.3.30"
 glob = "0.3.1"
 hostname = "0.3.1"
 itertools = "0.12.0"
@@ -21,4 +23,6 @@ parser = { path = "../parser" }
 rand = "0.8.5"
 regex = "1.10.2"
 tempfile = "3.8.1"
+tokio = { version = "1.34.0", features = ["io-util", "process"] }
+tokio-command-fds = "0.2.1"
 uzers = "0.11.3"
