--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -23,6 +23,12 @@ parser = { path = "../parser" }
 rand = "0.8.5"
 regex = "1.10.2"
 tempfile = "3.9.0"
-tokio = { version = "1.34.0", features = ["io-util", "process"] }
+tokio = { version = "1.35.1", features = [
+    "io-util",
+    "macros",
+    "process",
+    "signal",
+] }
+tokio-macros = "2.2.0"
 tokio-command-fds = "0.2.1"
 uzers = "0.11.3"
