Start using thiserror, fill out more set builtin options

--- a/cli/tests/cases/builtins/cd.yaml
+++ b/cli/tests/cases/builtins/cd.yaml
@@ -6,6 +6,9 @@ cases:
       cd /
       echo $?
       echo "pwd: $PWD"
+      cd tmp
+      echo $?
+      echo "pwd: $PWD"
       cd
       echo $?
       echo "pwd: $PWD"
