Implement while and until

--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -8,3 +8,24 @@ cases:
       echo "$((9/3))"
       echo "$((10%3))"
       echo "$((2**3))"
+
+  - name: "Basic arithmetic comparison"
+    stdin: |
+      echo "0  < 1: $((0 < 1))"
+      echo "0 <= 1: $((0 <= 1))"
+      echo "0 == 1: $((0 == 1))"
+      echo "0 != 1: $((0 != 1))"
+      echo "0  > 1: $((0 > 1))"
+      echo "0 >= 1: $((0 >= 1))"
+      echo "0  < 0: $((0 < 0))"
+      echo "0 <= 0: $((0 <= 0))"
+      echo "0 == 0: $((0 == 0))"
+      echo "0 != 0: $((0 != 0))"
+      echo "0  > 0: $((0 > 0))"
+      echo "0 >= 0: $((0 >= 0))"
+      echo "1  < 0: $((1 < 0))"
+      echo "1 <= 0: $((1 <= 0))"
+      echo "1 == 0: $((1 == 0))"
+      echo "1 != 0: $((1 != 0))"
+      echo "1  > 0: $((1 > 0))"
+      echo "1 >= 0: $((1 >= 0))"
