--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -10,6 +10,10 @@ cases:
       ls out.txt
       cat out.txt
 
+  - name: "Redirection to fd"
+    stdin: |
+      echo hi >&2
+
   - name: "Process substitution: input"
     expected_failure: true
     stdin: |
