Implement arithmetic assign ops, increase coverage

--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -1,13 +1,66 @@
 name: "Arithmetic"
 cases:
-  - name: "Basic arithmetic"
+  - name: "Unquoted arithmetic"
     stdin: |
       echo $((1+1))
-      echo "$((1+1))"
-      echo "$((2*3))"
-      echo "$((9/3))"
-      echo "$((10%3))"
-      echo "$((2**3))"
+
+  - name: "Arithmetic literals"
+    stdin: |
+      echo "$((0))"
+      echo "$((1))"
+      echo "$((10))"
+      echo "$((010))"
+      echo "$((0010))"
+      echo "$((0x10))"
+      echo "$((0x010))"
+
+  - name: "Basic quoted arithmetic"
+    stdin: |
+      echo " 1  + 1 == $((1+1))"
+      echo " 2  * 3 == $((2*3))"
+      echo " 9  / 3 == $((9/3))"
+      echo "10  % 3 == $((10%3))"
+      echo " 2 ** 3 == $((2**3))"
+      echo " 2  | 4 == $((2|4))"
+      echo " 2  & 4 == $((2&4))"
+      echo " 2  ^ 3 == $((2^3))"
+      echo " 1 && 0 == $((1&&0))"
+      echo " 1 || 0 == $((1&&0))"
+      echo " 1  , 2 == $((1,2))"
+
+  - name: "Shift arithmetic"
+    expected_failure: true
+    stdin: |
+      echo "32 >> 2 == $((32>>2))"
+      echo " 1 << 4 == $((1<<4))"
+
+  - name: "Assignment arithmetic"
+    stdin: |
+      x=0
+      #
+      echo "x = 1 => $((x = 1))"
+      echo "x is now $x"
+      #
+      echo "x += 1 => $((x += 1))"
+      echo "x is now $x"
+      #
+      echo "x -= 1 => $((x -= 1))"
+      echo "x is now $x"
+      #
+      echo "x *= 2 => $((x *= 2))"
+      echo "x is now $x"
+      #
+      echo "x++ == $((x++))"
+      echo "x is now $x"
+      #
+      echo "++x == $((++x))"
+      echo "x is now $x"
+      #
+      echo "x-- == $((x--))"
+      echo "x is now $x"
+      #
+      echo "--x == $((--x))"
+      echo "x is now $x"
 
   - name: "Basic arithmetic comparison"
     stdin: |
