--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,9 +23,11 @@ anyhow = "1.0.79"
 assert_cmd = "2.0.12"
 assert_fs = "1.1.0"
 colored = "2.1.0"
-dir-diff = "0.3.3"
+dir-cmp = "0.1.0"
 glob = "0.3.1"
 indent = "0.1.1"
+pathdiff = "0.2.1"
 prettydiff = "0.6.4"
+regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_yaml = "0.9.29"
