--- a/cli/tests/cases/compound_cmds/if.yaml
+++ b/cli/tests/cases/compound_cmds/if.yaml
@@ -2,5 +2,7 @@ name: "Compound commands: if"
 cases:
   - name: "Basic if"
     stdin: |
-      if false; then echo 1; fi
-      if true; then echo 2; fi
+      if false; then echo 1; else echo 2; fi
+      if false; then echo 3; elif false; then echo 4; else echo 5; fi
+      if true; then echo 6; else echo 7; fi
+      if false; then echo 8; elif true; then echo 10; else echo 11; fi
