Revisit here-doc parsing, various other fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ if_not_else = "allow"
 if_same_then_else = "allow"
 match_same_arms = "allow"
 missing_errors_doc = "allow"
+missing_panics_doc = "allow"
 must_use_candidate = "allow"
 redundant_closure_for_method_calls = "allow"
 redundant_else = "allow"
