--- a/cli/tests/cases/compound_cmds/subshell.yaml
+++ b/cli/tests/cases/compound_cmds/subshell.yaml
@@ -4,6 +4,6 @@ cases:
     stdin: |
       (echo hi)
   - name: "Piped subshell usage"
-    expected_failure: true # TODO: fix this test
+    known_failure: true # TODO: fix this test
     stdin: |
       (echo hi) | wc -l
