--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -18,7 +18,7 @@ cases:
       cat out.txt
 
   - name: "Input redirection from file"
-    expected_failure: true
+    known_failure: true
     test_files:
       - path: "in.txt"
         contents: |
@@ -31,13 +31,13 @@ cases:
       echo hi >&2
 
   - name: "Process substitution: input"
-    expected_failure: true
+    known_failure: true
     stdin: |
       shopt -u -o posix
       cat <(echo hi)
 
   - name: "Process substitution: input + output"
-    expected_failure: true
+    known_failure: true
     stdin: |
       shopt -u -o posix
       cp <(echo hi) >(cat)
