--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -20,6 +20,7 @@ hostname = "0.3.1"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 log = "0.4.20"
+nix = { version = "0.27.1", features = ["fs"] }
 parser = { path = "../parser" }
 rand = "0.8.5"
 regex = "1.10.2"
@@ -29,6 +30,7 @@ tokio = { version = "1.35.1", features = [
     "io-util",
     "macros",
     "process",
+    "rt",
     "signal",
 ] }
 tokio-macros = "2.2.0"
