Initial cut at multi-line interactive input

--- a/cli/tests/cases/basic.yaml
+++ b/cli/tests/cases/basic.yaml
@@ -11,8 +11,7 @@ cases:
     stdin: |
       echo 'hi'
     ignore_stderr: true
-    args:
-      - "-i"
+    args: ["-i"]
 
   - name: "Basic stdin usage"
     stdin: |
