--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0.79"
 async-recursion = "1.0.5"
 async-trait = "0.1.77"
 clap = { version = "4.4.18", features = ["derive"] }
+exec = "0.3.1"
 faccess = "0.2.4"
 futures = "0.3.30"
 glob = "0.3.1"
