--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,21 +1,25 @@
 [package]
-name = "rush"
-description = "rush shell"
+name = "brush-cli"
+description = "brush shell"
 edition.workspace = true
 license.workspace = true
 version.workspace = true
+
+[[bin]]
+name = "brush"
+path = "src/main.rs"
 
 [lints]
 workspace = true
 
 [dependencies]
 anyhow = "1.0.79"
+brush-interactive-shell = { path = "../interactive-shell" }
+brush-parser = { path = "../parser" }
+brush-shell = { path = "../shell" }
 clap = { version = "4.4.18", features = ["derive"] }
 env_logger = "0.10.2"
-interactive-shell = { path = "../interactive-shell" }
 log = "0.4.20"
-parser = { path = "../parser" }
-shell = { path = "../shell" }
 tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
 
 [dev-dependencies]
