--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "shell"
-description = "Shell"
+name = "brush-shell"
+description = "brush Shell"
 edition.workspace = true
 license.workspace = true
 version.workspace = true
+
+[lib]
+name = "shell"
 
 [lints]
 workspace = true
@@ -12,6 +15,7 @@ workspace = true
 anyhow = "1.0.79"
 async-recursion = "1.0.5"
 async-trait = "0.1.77"
+brush-parser = { path = "../parser" }
 clap = { version = "4.4.18", features = ["derive"] }
 exec = "0.3.1"
 faccess = "0.2.4"
@@ -22,7 +26,6 @@ itertools = "0.12.1"
 lazy_static = "1.4.0"
 log = "0.4.20"
 nix = { version = "0.27.1", features = ["fs"] }
-parser = { path = "../parser" }
 rand = "0.8.5"
 regex = "1.10.3"
 tempfile = "3.9.0"
