--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -17,6 +17,7 @@ if_same_then_else = "allow"
 
 [dependencies]
 anyhow = "1.0.79"
+indenter = "0.3.3"
 log = "0.4.20"
 peg = "0.8.2"
 thiserror = "1.0.57"
